<resources>
    <string name="app_name">Github User</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Username</string>
    <string name="username">Username</string>
    <string name="github_user">Github User</string>
    <string name="repository_text">Repository</string>
    <string name="followers_text">Followers</string>
    <string name="following_text">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="location">Location</string>
    <string name="count">0</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="theme">THEME</string>
    <string name="dark_mode">Dark Mode</string>
</resources>